FrostWire 2.0.9 build 565 - SEP/24/2018
 - New jlibtorrent 1.2.0.18
 - YT search removed
 - Bug fix on connection drop and transfer state loss
 - Bug fix where a "Saving to Internal Memory" rich notification would linger after picking an SD Card location
 - Translations updated: Chinese, Hebrew
 - Library updates: applovin 8.1.2, presage-moat-3.0.26-3.0.14, okhttp 3.11.0, gradle 3.2.0 (dev)
 - Unused resources and translations cleanup, over 1Mb size reduction in .apk installer
 - Optimizations and fixes

FrostWire 2.0.8 build 562 - SEP/08/2018
 - YT search fixed
 - Archive.org search fixed
 - Translations updated: Hebrew, Japanese, Dutch, Romanian, Russian, 
   Slovak, Serbian, Dutch, Lithuanian, Turkish, Bulgarian
   Afrikaans, Ukranian, Estonian, Luxembourgish
 - New user agent and peer finger print for tracker announcement
 - Exit, Restart optimizations
 - Possible crash upon fast restart fixed
 - New jlibtorrent 1.2.0.18-RC12
 - Library updates: openssl-1.1.1-pre9, presage-moat-3.0.23-3.0.14, 
   mopub 5.3.0, (dev) gradle 4.10
 - Library removal: prebid

FrostWire 2.0.7 build 556 - AUG/09/2018
 - Crash on Audio Player equalizer menu
 - Translations updated: Croatian, Thai, Indonesian, Polish, Italian,
   French, Afrikaans, Arabic, Czech, Danish, Finnish, Hungarian
 - Library updates: applovin 8.1.0, (dev) gradle 4.9,
   gms:play-services-base:15.0.1
 - Fixes bug on banner dismissal button behavior
 - Fixes bug displaying short file names in My Files
 - New GDPR consent dialog for European users
 - Freeze fixes

FrostWire 2.0.6 build 546 - JUL/10/2018
 - Yify search fixed
 - EZTV search fixed
 - TorrentDownloads search fixed, now magnet based
 - LimeTorrents search fixed
 - New jlibtorrent 1.2.0.18-RC9
 - Translations updated: Malay, Slovak, Vietnamese, Chinese
 - Library updates: prebid 0.4, (dev) buildtools 28.0.1, (dev) gradle 4.8.1
   mopub 5.2.0, applovin 8.0.2

FrostWire 2.0.5 build 541 - JUN/17/2018
 - No more intrusive interstitial ads when resuming app