@@ -181,7 +181,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
     implementation('com.mopub:mopub-sdk-banner:5.3.0@aar') { transitive = true }
     implementation('com.mopub:mopub-sdk-interstitial:5.3.0@aar') { transitive = true }
-    implementation 'com.mopub.mediation:admob:15.0.0.11'
     implementation 'com.applovin:applovin-sdk:8.1.3'
     implementation 'com.squareup.picasso:picasso:3.0.0-SNAPSHOT'
     implementation 'com.frostwire:jlibtorrent-android-arm:1.2.0.18'
