@@ -36,8 +36,6 @@ import com.mopub.common.privacy.ConsentStatus;
 import com.mopub.common.privacy.ConsentStatusChangeListener;
 import com.mopub.common.privacy.PersonalInfoManager;
 import com.mopub.common.util.Reflection;
-import com.mopub.mobileads.GooglePlayServicesBanner;
-import com.mopub.mobileads.GooglePlayServicesInterstitial;
 import com.mopub.mobileads.MoPubErrorCode;
 import com.mopub.mobileads.MoPubInterstitial;
 
@@ -88,9 +86,6 @@ public class MoPubAdNetwork extends AbstractAdNetwork implements ConsentStatusCh
         starting = true;
         initPlacementMappings(UIUtils.isTablet(activity.getResources()));
         SdkConfiguration sdkConfiguration = new SdkConfiguration.Builder(UNIT_ID_SEARCH_HEADER)
-                .withMediationSettings(
-                        new GooglePlayServicesBanner.GooglePlayServicesMediationSettings(npaBundle),
-                        new GooglePlayServicesInterstitial.GooglePlayServicesMediationSettings(npaBundle))
                 .build();
         fixExecutor(true);
         MoPub.initializeSdk(activity, sdkConfiguration, () -> {
